# gVM2-Cpp

./: CMakeLists.txt  CPU.cpp  CPU.h  Memory.cpp  Memory.h  main.cpp  util.cpp  util.h
gvm_compiler/: Assembler.cpp  Assembler.h  HexIO.cpp  HexIO.h
gvm_machine/: CPU.cpp  CPU.h  Memory.cpp  Memory.h  Motherboard.cpp  Motherboard.h
